# pdf_agent

./: .gitignore  README.md  TECHNICAL_NOTE.md  TESTING.md  req.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: agent.py  citations.py  config.py  ingestion.py  main.py  prompts.py  vectorstore.py
backend/tests/: EVALUATION.md  conftest.py  test_agent.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ChatWindow.tsx  CitationChip.tsx  Header.tsx  Landing.tsx  Mark.tsx  Message.tsx  PdfPreview.tsx
